package Gestione;

public interface Lista {

    public void Add();
    public void Get();
    public void Remove();
    public void Size();
    public void Contains();
    public void IndexOf();
    public void Clear();
    public void ToArray();
}
